Deployment/convert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convert
  template:
    metadata:
      labels:
        app: convert
    spec:
      containers:
      - name: convert
        image: gcr.io/linear-passkey-442607-k8/convert:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"   
            cpu: "100m"      
          limits:
            memory: "128Mi" 
            cpu: "150m" 
---
apiVersion: v1
kind: Service
metadata:
  name: convert-service
spec:
  selector:
    app: convert
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
