Deployment/merge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merge
  template:
    metadata:
      labels:
        app: merge
    spec:
      containers:
      - name: merge
        image: gcr.io/linear-passkey-442607-k8/merge:latest
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "64Mi"   
            cpu: "50m"     
          limits:
            memory: "128Mi"  
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: merge-service
spec:
  selector:
    app: merge
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
