Deployment/password-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password
  template:
    metadata:
      labels:
        app: password
    spec:
      containers:
      - name: password
        image: gcr.io/linear-passkey-442607-k8/password:latest
        ports:
        - containerPort: 8001
        resources:
          requests:
            memory: "64Mi"   
            cpu: "50m"      
          limits:
            memory: "128Mi"  
            cpu: "100m" 
---
apiVersion: v1
kind: Service
metadata:
  name: password-service
spec:
  selector:
    app: password
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
