Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "app-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /convert
        pathType: Prefix
        backend:
          service:
            name: convert-service
            port:
              number: 8000
      - path: /password
        pathType: Prefix
        backend:
          service:
            name: password-service
            port:
              number: 8001
      - path: /merge
        pathType: Prefix
        backend:
          service:
            name: merge-service
            port:
              number: 8002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8501
